# OpenShell

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TESTING.md  dco-signatures.json  flake.nix
.agents/skills/debug-openshell-cluster/: SKILL.md
.agents/skills/gator-gate/: SKILL.md
.agents/skills/helm-dev-environment/: SKILL.md
.agents/skills/test-release-canary/: SKILL.md
.github/: VOUCHED.td
.github/workflows/: branch-e2e.yml  deb-package.yml  docker-build.yml  driver-vm-linux.yml  driver-vm-macos.yml  e2e-kubernetes-test.yml  e2e-test.yml  nix-ci.yml  release-canary.yml  release-dev.yml  release-tag.yml  release-vm-kernel.yml
architecture/: build.md  compute-runtimes.md  gateway.md  sandbox.md  security-policy.md
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-cli/src/: main.rs  run.rs  ssh.rs
crates/openshell-cli/tests/: sandbox_create_lifecycle_integration.rs
crates/openshell-cni/: Cargo.toml
crates/openshell-cni/src/: lib.rs  main.rs
crates/openshell-core/: Cargo.toml  build.rs
crates/openshell-core/src/: grpc_client.rs  jwt.rs  lib.rs
crates/openshell-core/src/proto/: mod.rs
crates/openshell-driver-docker/: Cargo.toml
crates/openshell-driver-docker/src/: tests.rs
crates/openshell-driver-kubernetes/: Cargo.toml  README.md
crates/openshell-driver-kubernetes/src/: config.rs  driver.rs
crates/openshell-driver-macos-keychain/: Cargo.toml
crates/openshell-driver-macos-keychain/src/: lib.rs
crates/openshell-driver-podman/: Cargo.toml  README.md
crates/openshell-driver-podman/src/: container.rs
crates/openshell-driver-vm/scripts/: openshell-vm-sandbox-init.sh
crates/openshell-driver-vm/src/: driver.rs  rootfs.rs  runtime.rs
crates/openshell-gateway-interceptors/src/: lib.rs
crates/openshell-ocsf/: Cargo.toml
crates/openshell-policy/: Cargo.toml
crates/openshell-policy/src/: compose.rs  lib.rs  merge.rs
crates/openshell-prover/: Cargo.toml
crates/openshell-providers/: Cargo.toml
crates/openshell-providers/src/: profiles.rs
crates/openshell-router/: Cargo.toml
crates/openshell-sandbox/: Cargo.toml
crates/openshell-sandbox/src/: lib.rs
crates/openshell-sdk/: Cargo.toml  README.md
crates/openshell-sdk/src/: auth.rs  client.rs  config.rs  edge_tunnel.rs  error.rs  lib.rs  oidc.rs  raw.rs  refresh.rs  transport.rs  types.rs
crates/openshell-sdk/tests/: client_mock.rs
crates/openshell-server/: Cargo.toml
crates/openshell-server-macros/: Cargo.toml
crates/openshell-server/migrations/postgres/: 005_clear_dedup_for_decided_chunks.sql
crates/openshell-server/src/: config_file.rs  credentials.rs  lib.rs  middleware.rs  policy_store.rs
crates/openshell-server/src/auth/: k8s_sa.rs
crates/openshell-server/src/compute/: mod.rs
crates/openshell-server/src/grpc/: policy.rs  provider.rs  sandbox.rs  validation.rs
crates/openshell-server/src/persistence/: postgres.rs  sqlite.rs
crates/openshell-supervisor-middleware/: Cargo.toml
crates/openshell-supervisor-middleware/src/: lib.rs  remote.rs  service.rs
crates/openshell-supervisor-middleware/src/builtins/: mod.rs  secrets.rs
crates/openshell-supervisor-network/: Cargo.toml
crates/openshell-supervisor-network/data/: sandbox-policy.rego
crates/openshell-supervisor-network/src/: opa.rs  policy_local.rs  procfs.rs  proxy.rs
crates/openshell-supervisor-network/src/l7/: relay.rs  rest.rs  token_grant_injection.rs
crates/openshell-supervisor-process/: Cargo.toml
crates/openshell-supervisor-process/src/: child_env.rs  process.rs
crates/openshell-tui/: Cargo.toml
crates/openshell-tui/src/: app.rs  lib.rs
crates/openshell-vfio/: Cargo.toml
crates/openshell-vfio/src/: bind.rs  error.rs  gpu.rs  lib.rs  pci.rs  reconcile.rs  sysfs.rs  test_support.rs
deploy/docker/: Dockerfile.supervisor
deploy/sbom/: resolve_licenses.py  resolve_licenses_test.py
docs/about/: installation.mdx
docs/kubernetes/: setup.mdx  topology.mdx
docs/reference/: default-policy.mdx  gateway-config.mdx  gateway-configuration.mdx  policy-schema.mdx  sandbox-compute-drivers.mdx  support-matrix.mdx
docs/sandboxes/: manage-gateways.mdx  manage-sandboxes.mdx  policies.mdx  providers-v2.mdx
e2e/: with-docker-gateway.sh  with-kube-gateway.sh
e2e/rust/: Cargo.toml
e2e/rust/tests/: kubernetes_ha_rebalancing.rs  macos_keychain_credential_driver.rs  spiffe_kubernetes.rs
examples/governance-interceptor/: README.md
examples/opencode-privacy-redaction/: README.md
examples/opencode-privacy-redaction/proxy/: .env.example  .gitignore  Makefile  pyproject.toml
examples/opencode-privacy-redaction/proxy/src/redact_spike/: __init__.py  config.py  content_policy.py  mcp_debug.py  mcp_server.py  private_switch_proxy.py  proxy.py  redaction.py  upstream.py
examples/opencode-privacy-redaction/proxy/tests/: test_config.py  test_content_policy.py  test_mcp_server.py  test_proxy.py  test_redaction.py  test_upstream.py
examples/policy-source/: smoke.sh
examples/supervisor-middleware-content-guard/: Cargo.toml  README.md  policy.yaml
examples/supervisor-middleware-content-guard/src/: main.rs
nix/: crate.nix  overlay.nix  vm-runtime.nix  workspace.nix
openshell-agents/: README.md  run.sh
openshell-agents/gator/: Dockerfile  README.md  agent.yaml
openshell-agents/runtime/: entrypoint.sh  subagent.sh  supervisor.sh  supervisor_test.sh
proto/: compute_driver.proto  middleware.proto  openshell.proto  sandbox.proto
rfc/0004-sandbox-proxy-egress-adapter/: README.md  current-shape.md  implementation-plan.md  technical-design.md
rfc/0005-driver-config-passthrough/: README.md
rfc/0005-sandbox-egress-middleware/: README.md  TRACKER.md
rfc/0005-shared-sdk-core-and-ts-binding/: README.md
rfc/0006-gateway-interceptors/: README.md
rfc/0009-sandbox-egress-middleware/: README.md
rfc/0009-supervisor-middleware/: README.md
rfc/0010-gateway-interceptors/: README.md
sandboxes/nvidia-gpu/: Dockerfile  README.md  versions.env
tasks/: helm.toml  test.toml  vm.toml
tasks/scripts/: docker-build-image.sh  gateway-vm.sh  helm-k3s-local.sh  stage-prebuilt-binaries.sh
(+27 files in other folders)
