# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "openshell_bootstrap"
path = "src/lib.rs"

[dependencies]
openshell-core = { path = "../openshell-core", default-features = false }
bollard = "0.20"
bytes = { workspace = true }
futures = { workspace = true }
miette = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4"
tempfile = "3"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
