# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-sandbox"
description = "OpenShell process sandbox and monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openshell-sandbox"
path = "src/main.rs"

[dependencies]
openshell-core = { path = "../openshell-core", default-features = false }
openshell-ocsf = { path = "../openshell-ocsf" }
openshell-policy = { path = "../openshell-policy" }
openshell-supervisor-network = { path = "../openshell-supervisor-network" }
openshell-supervisor-middleware = { path = "../openshell-supervisor-middleware" }
openshell-supervisor-process = { path = "../openshell-supervisor-process" }

# Async runtime
tokio = { workspace = true }

# gRPC (tonic::Status downcast in error mapping)
tonic = { workspace = true, features = ["channel", "tls-native-roots"] }

# CLI
clap = { workspace = true }

# Error handling
miette = { workspace = true }

# TLS crypto provider install (main.rs)
rustls = { workspace = true }

# Serialization (serde_json::json! for OCSF unmapped fields)
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[features]
default = ["telemetry"]
## Compile in telemetry activity collection (forwards to openshell-core/telemetry).
## On by default; build with `--no-default-features` for a telemetry-free sandbox
## supervisor that never collects or forwards activity summaries.
telemetry = ["openshell-core/telemetry"]

[dev-dependencies]
openshell-core = { path = "../openshell-core", features = ["test-helpers"] }
tempfile = "3"
temp-env = "0.3"
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
