# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-supervisor-middleware"
description = "In-process supervisor middleware contract and built-ins for OpenShell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core" }

miette = { workspace = true }
prost-types = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["channel", "server"] }

[dev-dependencies]
tokio-stream = { workspace = true, features = ["net"] }

[lints]
workspace = true
