# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]

[package]
name = "openshell-supervisor-middleware-content-guard"
description = "Example OpenShell supervisor middleware service"
version = "0.0.0"
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
openshell-core = { path = "../../crates/openshell-core", default-features = false }
prost-types = "0.14"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14", features = ["transport"] }

[[bin]]
name = "supervisor-middleware-content-guard"
path = "src/main.rs"
