# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "redact-spike"
version = "0.1.0"
description = "OpenAI-compatible inference proxy with policy-driven image redaction and MCP fallback."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
redact-proxy = "redact_spike.proxy:main"
redact-private-proxy = "redact_spike.private_switch_proxy:main"
redact-mcp = "redact_spike.mcp_server:main"
redact-mcp-call = "redact_spike.mcp_debug:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
